--- a/index.html
+++ b/index.html
@@ -581,7 +581,9 @@
               </h1>
             </div>
             <div class="box-botao">
-              <a href="https://wa.me/5511999999999" class="btn"
+              <a
+                href="https://wa.me/5551991831210?text=Sou%20Lojista%2C%20gostaria%20de%20saber%20mais%20informa%C3%A7%C3%B5es"
+                class="btn"
                 ><!--Botão Animado-->
                 <span>Mandar uma mensagem</span>
               </a>
