buttons width and logo link

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="centro">
           <!--centro-->
           <header>
-            <div class="logo">
+            <a href="https://shallow.com.br" class="logo">
               <img
                 src="./assets/images/logo-shallow.webp"
                 fetchpriority="high"
@@ -131,7 +131,7 @@
                 width="135"
                 height="135"
               />
-            </div>
+            </a>
           </header>
           <div class="container-home desktop-display">
             <!--Container Home-->
